# Musik

./: .gitignore  Musik.bat  README.md  launch.ps1  setup.ps1
app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
app/public/: manifest.webmanifest  sw.js
app/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
app/src-tauri/: tauri.conf.json
app/src-tauri/src/: lib.rs
app/src/components/: AddMusic.tsx  ApplyPanel.tsx  ClustersPanel.tsx  EmptyState.tsx  GenrePanel.tsx  IdentifyPanel.tsx  ImportBar.tsx  JobBanner.tsx  MapView.tsx  Meter.tsx  wave.css  (+15 more)
engine/: README.md  pyproject.toml
engine/mgc/: __init__.py  _env.py  _net.py  cli.py  config.py  server.py  types.py
engine/mgc/actions/: __init__.py  organize.py  tags.py
engine/mgc/analysis/: __init__.py  features.py  groove.py  waveform.py
engine/mgc/api/: __init__.py  service.py
engine/mgc/audio/: __init__.py  decode.py
engine/mgc/classify/: __init__.py  classifier.py
engine/mgc/cluster/: __init__.py  chunk_group.py  cluster.py
engine/mgc/deep/: __init__.py  language.py  separate.py
engine/mgc/embed/: __init__.py  base.py  baseline.py  cache.py  clap.py  discogs.py  mert.py  muq.py
engine/mgc/eval/: __init__.py  validate.py
engine/mgc/fusion/: __init__.py  fuse.py
engine/mgc/identify/: __init__.py  identify.py
engine/mgc/ingest/: __init__.py  scanner.py
engine/mgc/learn/: __init__.py  maest_index.py  maest_probe.py  train_head.py
engine/mgc/llm/: __init__.py  genre.py  ollama.py  setbuild.py  websearch.py
engine/mgc/metadata/: __init__.py  acoustid.py  bootstrap.py  discogs.py  dump.py  generate.py  genre_graph.py  genres.json  musicbrainz.py  parse.py
engine/mgc/registry/: __init__.py  centroids.py
engine/mgc/search/: __init__.py  search.py
engine/mgc/segments/: __init__.py  segments.py
engine/mgc/setbuilder/: __init__.py  builder.py
engine/mgc/similarity/: __init__.py  bands.py  explain.py  similar.py
engine/mgc/store/: __init__.py  db.py  schema.py
engine/mgc/tagging/: __init__.py  audioset.py
engine/mgc/taxonomy/: __init__.py  rym.py
engine/mgc/understanding/: __init__.py  compile.py  moods.py
engine/packaging/: build_sidecar.py  sidecar.py
engine/tests/: conftest.py  test_acoustid.py  test_actions.py  test_analysis.py  test_audio.py  test_bands.py  test_classify.py  test_cluster.py  test_deep.py  test_discogs_labels.py  test_e2e.py  test_embed.py  test_eval.py  test_explain.py  test_fusion.py  test_identify.py  test_ingest.py  test_metadata.py  test_models_integration.py  test_muq.py  test_registry.py  test_search.py  test_segments.py  test_server.py  test_setbuilder.py  test_similarity.py  test_store.py  test_tags_formats.py  test_taxonomy.py  test_understanding.py  test_websearch.py
research/: FINDINGS.md
scripts/: New-MusikShortcut.ps1
(+4 files in other folders)
