[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mgc-engine"
version = "0.1.0"
description = "Music Genre Classifier engine — embedding-based, few-shot custom subgenres, bulk tagging + folder organization (Phase 1)"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "soundfile",
    "scikit-learn",
    "mutagen",
    "typer>=0.12",
]

[project.optional-dependencies]
# Heavy model backends — installed on demand, never required for the test suite.
models = [
    "torch",              # install the CUDA build for your GPU (see README)
    "torchaudio",
    "transformers",       # MERT
    "safetensors",
    "huggingface_hub",
    "nnAudio",            # MERT-330M CQT feature
    "einops",             # MERT remote code
    "truststore",         # OS trust store for HF downloads behind TLS-inspecting proxies
    "laion-clap",         # CLAP (audio+text); pins older deps — install in its own env if it conflicts
    "librosa",            # richer decode/features
    "pyacoustid",         # AcoustID fingerprint identification (needs the fpcalc binary)
    # essentia / essentia-tensorflow (Discogs-EffNet) — install per-platform; see README (Windows caveat)
]
viz = [
    "umap-learn",
    "matplotlib",
]
server = [
    "fastapi",
    "uvicorn",
]
dev = [
    "pytest",
    "fastapi",
    "uvicorn",
    "httpx",
]

[project.scripts]
mgc = "mgc.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["mgc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
